--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 				<div id="score__board">ara bhay</div>
 				<div id="game__grid"></div>
 				<div id="">kya hua bhay</div>
+				<!-- <img src="assets/x.svg" alt=""> -->
 			</section>
 		</main>
 	</body>
