--- a/index.html
+++ b/index.html
@@ -27,10 +27,18 @@
 			<section id="game">
 				<div id="score__board ">ara bhay</div>
 				<div id="game__grid"></div>
+				<section id="winner__tab visible">
+					<h1 id="winnner__name">
+						<span>O</span> <br> WON
+					</h1>
+				</section>z
 				<div id="">kya hua bhay</div>
-				<!-- <img src="assets/x.svg" alt=""> -->
 			</section>
 		</main>
+
+
+
+
 	</body>
 </html>
 
