--- a/index.html
+++ b/index.html
@@ -9,33 +9,13 @@
 		<script defer src="app.js"></script>
 	</head>
 	<body>
-		<header>
-			<nav>
-				<h1>Tic Tac Toe</h1>
-			</nav>
-		</header>
-
+	
 		<main>
-			<section id="page__1">
-				<div id="selection">
-					<button>2 Players</button>
-					<div class="divider"></div>
-					<button>vs AI</button>
-				</div>
-			</section>
-
-			<section id="game">
-				<div id="score__board ">ara bhay</div>
-				<div id="game__grid"></div>
-				<section id="winner__tab visible">
-					<h1 id="winnner__name">
-						<span>O</span> <br> WON
-					</h1>
-				</section>z
-				<div id="">kya hua bhay</div>
-			</section>
+			<div id="game__grid">
+			</div>
 		</main>
 
+		<footer>icons</footer>
 
 
 
