--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
 	</head>
 	<body>
 	
-		<main>
+		<main id="game">
 			<div id="game__grid">
 			</div>
 		</main>
-
-		<footer>icons</footer>
 
 
 
