--- a/index.html
+++ b/index.html
@@ -9,15 +9,8 @@
 		<script defer src="app.js"></script>
 	</head>
 	<body>
-	
-		<main id="game">
-			<div id="game__grid">
-			</div>
+		<main>
+			<div id="game__grid"></div>
 		</main>
-
-
-
 	</body>
 </html>
-
-
